# canopus

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  app.py  docker-compose.yml  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: sonarcloud.yml  test.yml
canopus/: __init__.py  config.py
canopus/api/: __init__.py  auth.py  routes.py
canopus/cipher/: aes256cbc.py  aes256gcm.py  base.py  fernet.py
canopus/core/: crypto.py  keys.py
canopus/storage/: aws_secrets.py  base.py  database.py  env.py  local_file.py  sqlite.py
docs/: openapi.yaml
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_ciphers.py  test_crypto.py  test_storage.py
