[project]
name = "canopus"
dynamic = ["version"]
description = "A lightweight encryption service inspired by HashiCorp Vault"
requires-python = ">=3.12"
dependencies = [
    "cryptography~=46.0.6",
    "flask~=3.1.3",
    "flask-limiter~=3.5",
    "sqlalchemy~=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
aws = [
    "boto3>=1.34",
]
mysql = [
    "pymysql>=1.1",
]
postgres = [
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "canopus.version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "B904",  # raise-without-from-inside-except — intentional in cipher backends
]
